--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,18 @@ numpy
 pandas
 scikit-learn
 
+
+
+librosa 
+matplotlib
+os
+IPython
+random
+warnings
+tensorflow
+tensorflow_io
+
+
 # tests/linter
 black
 coverage
