--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,5 @@
-# packaging
-pip>=9
-setuptools>=26
-twine
-wheel>=0.29
-
-# data science
-numpy
+streamlit
 pandas
-scikit-learn
-
-
-
-librosa 
-matplotlib
-IPython
-tensorflow
-tensorflow_io
-
-
-# tests/linter
-black
-coverage
-flake8
-pytest
-yapf
-
-# API
-gcsfs
-google-cloud-storage
-mlflow
-s3fs
-
-# utilities
-six>=1.14
-joblib
-memoized-property
-termcolor
+numpy
+sklearn
+plotly
